--- a/WinTRC/WinTRC/WinTrc.csproj
+++ b/WinTRC/WinTRC/WinTrc.csproj
@@ -75,6 +75,12 @@
     </Compile>
     <Compile Include="Native.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Forms\PropertiesWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PropertiesWindow.Designer.cs">
+      <DependentUpon>PropertiesWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\About.resx">
       <SubType>Designer</SubType>
@@ -95,6 +101,10 @@
     <EmbeddedResource Include="Forms\SymbolsWindow.resx">
       <SubType>Designer</SubType>
       <DependentUpon>SymbolsWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PropertiesWindow.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>PropertiesWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
