--- a/Jpfsv/Jpfsv.vcproj
+++ b/Jpfsv/Jpfsv.vcproj
@@ -136,6 +136,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\jpfsv\tracekern.c"
+					>
+				</File>
+				<File
+					RelativePath=".\jpfsv\traceprocess.c"
+					>
+				</File>
+				<File
 					RelativePath=".\jpfsv\util.c"
 					>
 				</File>
@@ -167,6 +175,10 @@
 					RelativePath=".\fsvtest\testfsv.def"
 					>
 				</File>
+				<File
+					RelativePath=".\fsvtest\trcsession.c"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -174,6 +186,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\include\jpfbtdef.h"
+				>
+			</File>
 			<File
 				RelativePath="..\include\jpfsv.h"
 				>
