--- a/Jpfsv/Jpfsv.vcproj
+++ b/Jpfsv/Jpfsv.vcproj
@@ -108,6 +108,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\jpfsv\eventsink.c"
+					>
+				</File>
+				<File
 					RelativePath=".\jpfsv\internal.h"
 					>
 				</File>
