--- a/ctrc/Ctrc.vcproj
+++ b/ctrc/Ctrc.vcproj
@@ -65,6 +65,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\ctrc\ctrc.manifest"
+				>
+			</File>
+			<File
 				RelativePath=".\ctrc\ctrc.rc"
 				>
 			</File>
