--- a/Jpfsv/Jpfsv.vcproj
+++ b/Jpfsv/Jpfsv.vcproj
@@ -128,6 +128,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\jpfsv\procinspect.c"
+					>
+				</File>
+				<File
 					RelativePath=".\jpfsv\psinfo.c"
 					>
 				</File>
