Handling of premature UFBT tracee death

--- a/Jpfsv/Jpfsv.vcproj
+++ b/Jpfsv/Jpfsv.vcproj
@@ -88,6 +88,10 @@
 				RelativePath=".\DIRS"
 				>
 			</File>
+			<File
+				RelativePath="..\Todo.txt"
+				>
+			</File>
 			<Filter
 				Name="jpfsv"
 				>
