--- a/Jpfbt/Jpfbt.vcproj
+++ b/Jpfbt/Jpfbt.vcproj
@@ -80,6 +80,10 @@
 				Name="jpfbt"
 				>
 				<File
+					RelativePath=".\jpfbt\DIRS"
+					>
+				</File>
+				<File
 					RelativePath=".\jpfbt\internal.h"
 					>
 				</File>
@@ -97,10 +101,6 @@
 				</File>
 				<File
 					RelativePath=".\jpfbt\patchdb.c"
-					>
-				</File>
-				<File
-					RelativePath=".\jpfbt\SOURCES"
 					>
 				</File>
 				<File
@@ -123,27 +123,31 @@
 					Name="um"
 					>
 					<File
-						RelativePath=".\jpfbt\um_buffer.c"
+						RelativePath=".\jpfbt\um\SOURCES"
 						>
 					</File>
 					<File
-						RelativePath=".\jpfbt\um_dbgtrace.c"
+						RelativePath=".\jpfbt\um\um_buffer.c"
 						>
 					</File>
 					<File
-						RelativePath=".\jpfbt\um_internal.h"
+						RelativePath=".\jpfbt\um\um_dbgtrace.c"
 						>
 					</File>
 					<File
-						RelativePath=".\jpfbt\um_memalloc.c"
+						RelativePath=".\jpfbt\um\um_internal.h"
 						>
 					</File>
 					<File
-						RelativePath=".\jpfbt\um_patch.c"
+						RelativePath=".\jpfbt\um\um_memalloc.c"
 						>
 					</File>
 					<File
-						RelativePath=".\jpfbt\um_threadenum.c"
+						RelativePath=".\jpfbt\um\um_patch.c"
+						>
+					</File>
+					<File
+						RelativePath=".\jpfbt\um\um_threadenum.c"
 						>
 					</File>
 				</Filter>
