* Adaptions for kernel-compatibility  * Adaptions for changed jpht types

--- a/Jpfbt/Jpfbt.vcproj
+++ b/Jpfbt/Jpfbt.vcproj
@@ -151,6 +151,14 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="km_wrk"
+					>
+					<File
+						RelativePath=".\jpfbt\km_wrk\SOURCES"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="testfbt_um"
