--- a/Jpfbt/Jpfbt.vcproj
+++ b/Jpfbt/Jpfbt.vcproj
@@ -151,6 +151,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\jpfbt\um_patchdb.c"
+						>
+					</File>
+					<File
 						RelativePath=".\jpfbt\um_threadenum.c"
 						>
 					</File>
@@ -176,6 +180,10 @@
 					</File>
 					<File
 						RelativePath=".\jpfbt\km_patch.c"
+						>
+					</File>
+					<File
+						RelativePath=".\jpfbt\km_patchdb.c"
 						>
 					</File>
 				</Filter>
@@ -207,6 +215,18 @@
 						>
 					</File>
 				</Filter>
+			</Filter>
+			<Filter
+				Name="jpwrkstb"
+				>
+				<File
+					RelativePath=".\jpwrkstb\SOURCES"
+					>
+				</File>
+				<File
+					RelativePath=".\jpwrkstb\wrkstubs.c"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
