Headers adapted, include/jpkfbtaux.h introduced, jpfsv kernel trace stubs

--- a/Jpkfbt/Jpkfbt.vcproj
+++ b/Jpkfbt/Jpkfbt.vcproj
@@ -199,6 +199,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\include\jpkfbtaux.h"
+				>
+			</File>
+			<File
 				RelativePath="..\include\jpkfbtmsg.h"
 				>
 			</File>
