--- a/TrcView/TrcView.vcproj
+++ b/TrcView/TrcView.vcproj
@@ -44,7 +44,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include; ..\..\cfix\include"
+				AdditionalIncludeDirectories="..\include; ..\..\cfix\include;..\..\jpht\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -129,7 +129,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include; ..\..\cfix\include"
+				AdditionalIncludeDirectories="..\include; ..\..\cfix\include;..\..\jpht\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG"
 				MinimalRebuild="false"
 				RuntimeLibrary="2"
