* New TLS implementation based on unused ETHREAD bits  * EH-Hack fixed for Vista  * cleanup jpfbt-API

--- a/Jpfbt/Jpfbt.vcproj
+++ b/Jpfbt/Jpfbt.vcproj
@@ -228,6 +228,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\testfbt\symptrs.c"
+					>
+				</File>
+				<File
 					RelativePath=".\testfbt\test.h"
 					>
 				</File>
