--- a/Jpkfbt/jpkfbt/perfctr.ini
+++ b/Jpkfbt/jpkfbt/perfctr.ini
@@ -25,6 +25,8 @@ JPKFBTP_EXITEVENTSDROPPED_009_NAME	= Events dropped (Exit)
 JPKFBTP_UNWINDEVENTSDROPPED_009_NAME = Events dropped (Unwind)
 JPKFBTP_IMAGEINFOEVENTSDROPPED_009_NAME = Image Infos dropped				
 JPKFBTP_FAILEDCHUNKFLUSHES_009_NAME	= Failed chunk flushes				
+JPKFBTP_EVENTSCAPTURED_009_NAME	= Events captured
+JPKFBTP_UNWINDINGS_009_NAME	= Exception unwindings
 
 JPKFBTP_FREE_009_HELP = Buffers (Free)
 JPKFBTP_DIRTY_009_HELP = Buffers (Dirty) 				
@@ -37,3 +39,5 @@ JPKFBTP_EXITEVENTSDROPPED_009_HELP	= Events dropped (Exit)
 JPKFBTP_UNWINDEVENTSDROPPED_009_HELP = Events dropped (Unwind)
 JPKFBTP_IMAGEINFOEVENTSDROPPED_009_HELP = Image Infos dropped				
 JPKFBTP_FAILEDCHUNKFLUSHES_009_HELP	= Failed chunk flushes
+JPKFBTP_EVENTSCAPTURED_009_HELP	= Events captured
+JPKFBTP_UNWINDINGS_009_HELP	= Exception unwindings
