ThreadData freeing, additional perf counters, tracepoint-exceptions removed

--- a/Jpkfbt/jpkfbt/perfctr.ini
+++ b/Jpkfbt/jpkfbt/perfctr.ini
@@ -19,25 +19,29 @@ JPKFBTP_DIRTY_009_NAME = Buffers (Dirty)
 JPKFBTP_COLLECTED_009_NAME = Buffers (Collected)			
 JPKFBTP_FREEPREALLOCATIONPOOLSIZE_009_NAME = Prealloc. Pool (Free)		
 JPKFBTP_FAILEDPREALLOCATIONPOOLALLOCATIONS_009_NAME	= Prealloc. Pool (Failed Alloc)
-JPKFBTP_REENTRANTTHUNKEXECUTIONSDETECTED_009_NAME = Reentrant executions
-JPKFBTP_ENTRYEVENTSDROPPED_009_NAME	= Events dropped (Entry)
-JPKFBTP_EXITEVENTSDROPPED_009_NAME	= Events dropped (Exit)
-JPKFBTP_UNWINDEVENTSDROPPED_009_NAME = Events dropped (Unwind)
-JPKFBTP_IMAGEINFOEVENTSDROPPED_009_NAME = Image Infos dropped				
-JPKFBTP_FAILEDCHUNKFLUSHES_009_NAME	= Failed chunk flushes				
+JPKFBTP_REENTRANTTHUNKEXECUTIONSDETECTED_009_NAME = Reentrant executions (Delta)
+JPKFBTP_ENTRYEVENTSDROPPED_009_NAME	= Events dropped (Entry, Delta)
+JPKFBTP_EXITEVENTSDROPPED_009_NAME	= Events dropped (Exit, Delta)
+JPKFBTP_UNWINDEVENTSDROPPED_009_NAME = Events dropped (Unwind, Delta)
+JPKFBTP_IMAGEINFOEVENTSDROPPED_009_NAME = Image Infos dropped (Delta)			
+JPKFBTP_FAILEDCHUNKFLUSHES_009_NAME	= Failed chunk flushes (Delta)	
 JPKFBTP_EVENTSCAPTURED_009_NAME	= Events captured
+JPKFBTP_EVENTSCAPTUREDDELTA_009_NAME	= Events captured (Delta)
 JPKFBTP_UNWINDINGS_009_NAME	= Exception unwindings
+JPKFBTP_THREADTEARDOWNS_009_NAME = Thread Teardowns
 
 JPKFBTP_FREE_009_HELP = Buffers (Free)
 JPKFBTP_DIRTY_009_HELP = Buffers (Dirty) 				
 JPKFBTP_COLLECTED_009_HELP Buffers (Collected)			
 JPKFBTP_FREEPREALLOCATIONPOOLSIZE_009_HELP = Prealloc. Pool (Free)		
 JPKFBTP_FAILEDPREALLOCATIONPOOLALLOCATIONS_009_HELP	= Prealloc. Pool (Failed Alloc)
-JPKFBTP_REENTRANTTHUNKEXECUTIONSDETECTED_009_HELP = Reentrant executions
-JPKFBTP_ENTRYEVENTSDROPPED_009_HELP	= Events dropped (Entry)
-JPKFBTP_EXITEVENTSDROPPED_009_HELP	= Events dropped (Exit)
-JPKFBTP_UNWINDEVENTSDROPPED_009_HELP = Events dropped (Unwind)
-JPKFBTP_IMAGEINFOEVENTSDROPPED_009_HELP = Image Infos dropped				
-JPKFBTP_FAILEDCHUNKFLUSHES_009_HELP	= Failed chunk flushes
+JPKFBTP_REENTRANTTHUNKEXECUTIONSDETECTED_009_HELP = Reentrant executions (Delta)
+JPKFBTP_ENTRYEVENTSDROPPED_009_HELP	= Events dropped (Entry, Delta)
+JPKFBTP_EXITEVENTSDROPPED_009_HELP	= Events dropped (Exit, Delta)
+JPKFBTP_UNWINDEVENTSDROPPED_009_HELP = Events dropped (Unwind, Delta)
+JPKFBTP_IMAGEINFOEVENTSDROPPED_009_HELP = Image Infos dropped (Delta)			
+JPKFBTP_FAILEDCHUNKFLUSHES_009_HELP	= Failed chunk flushes (Delta)
 JPKFBTP_EVENTSCAPTURED_009_HELP	= Events captured
+JPKFBTP_EVENTSCAPTUREDDELTA_009_HELP	= Events captured (Delta)
 JPKFBTP_UNWINDINGS_009_HELP	= Exception unwindings
+JPKFBTP_THREADTEARDOWNS_009_HELP = Thread Teardowns
