--- a/tools/Fbt.Trace.Analysis/Fbt.Trace.Analysis.csproj
+++ b/tools/Fbt.Trace.Analysis/Fbt.Trace.Analysis.csproj
@@ -27,6 +27,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PowerCollections, Version=1.0.2141.24679, Culture=neutral, processorArchitecture=MSIL">
